--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -22,7 +22,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #18bc9c;
+    color: #FF9D99;
 }
 
 h1,
@@ -63,15 +63,15 @@ hr.star-light {
 
 hr.star-light:after {
     color: #fff;
-    background-color: #18bc9c;
+    background-color: #F7645D;
 }
 
 hr.star-primary {
-    border-color: #2c3e50;
+    border-color: #F7645D;
 }
 
 hr.star-primary:after {
-    color: #2c3e50;
+    color: #F7645D;
     background-color: #fff;
 }
 
@@ -82,7 +82,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: #F7645D;
 }
 
 header .container {
@@ -151,6 +151,7 @@ header .intro-text .skills {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+    background: #9A3E3A;
 }
 
 .navbar a:focus {
@@ -181,16 +182,21 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: #F7645D;
 }
 
-section.success a,
+section.success a, {
+    outline: 0;
+    color: white;
+}
+
 section.success a:hover,
 section.success a:focus,
 section.success a:active,
 section.success a.active {
     outline: 0;
-    color: #2c3e50;
+    color: white;
+    color: #F7645D;
 }
 
 @media(max-width:767px) {
@@ -220,7 +226,7 @@ section.success a.active {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(24,188,156,.9);
+    background: rgba(247,100,93,.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -274,7 +280,7 @@ section.success a.active {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #18bc9c;
+    color: #9A3E3A;
     background: #fff;
 }
 
@@ -327,7 +333,7 @@ section.success a.active {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #18bc9c;
+    color: #F7645D;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -344,7 +350,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #2c3e50;
+    background-color: #9A3E3A;
 }
 
 footer .footer-col {
@@ -353,7 +359,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #233140;
+    background-color: #56211F;
 }
 
 .btn-social {
@@ -437,7 +443,7 @@ footer .footer-below {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #2c3e50;
+    background-color: #F7645D;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -447,7 +453,7 @@ footer .footer-below {
     z-index: 1052;
     width: 1px;
     height: 75px;
-    background-color: #2c3e50;
+    background-color: #F7645D;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
@@ -456,4 +462,46 @@ footer .footer-below {
 .portfolio-modal .modal-backdrop {
     display: none;
     opacity: 0;
+}
+
+/* bootstrap ovverride */
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
+    color: #FF9D99;
+}
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+    color: #FF9D99;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    background: #5D2422;
+}
+
+body {
+    color: #5D2422
+}
+
+.btn-success {
+    background: #F7645D;
+    border-color: #F7645D;
+}
+
+.btn-success:hover {
+    background: #D44E47;
+    border-color: #D44E47;
+}
+
+.btn-success:focus {
+    background: #D44E47;
+    border-color: #D44E47;
+}
+
+.btn-success:active {
+    background: #D44E47 !important;
+    border-color: #D44E47 !important;
+    outline: none !important;
 }
